--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
- 
-    <title>Sinatra Template</title>
-  </head>
-  
-  <body>
+<head>
+	<title>Shortlink App</title>
+	<link href="/styles.css" rel="stylesheet" type="text/css" media="screen">
+</head>
+<body>
     <%= yield %>    
   </body>
 </html>
