--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shortlink App</title>
+	<title>Ten.io</title>
 	<link href="/styles.css" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
 	<script src="/jquery-1.6.4.min.js" type="text/javascript"></script>
 	<script src="/application.js" type="text/javascript"></script>
 </head>
